AttackSpeed implemented, targeting bug fixes (fixed defenders swapped target and some defenders did not attack).